CHANGELOG
=========
+-----------------------+
| VERSION: 0.4.4        |
+-----------------------+
BUGFIXES
04-07-05    Adding a block redirected to a blank screen - fixed
04-07-05    Removed stray comma that killed FCK editor for msie (Ori Shiloh)
04-07-05    Changed use of document.all to document.getElementById in installer (Leo 
            Lijstenmaker)
03-07-05    Removed reference to $_SERVER['REQUEST_URI'] in SimpleNav (Tony Oliver) that
            would cause non-Apache environments to fail
01-07-05    Fixed bug where recordsets sent to Pager weren't working because the
            'totalItems' key existed but was null

IMPROVEMENTS
04-07-05    Renamed SGL_Controller::_getPageObject() to _getModel()


+-----------------------+
| VERSION: 0.4.3        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
27-06-05    Implemented updates for improved Pager_Wrapper (Lorenzo Alberton) and added
            tests
27-06-05    Changed to svn for SCM

+-----------------------+
| VERSION: 0.4.2        |
+-----------------------+
BUGFIXES
23-06-05    Fixed bug where recursive array merging between global and module
            configs was causing duplicate keys.  In the case where Config lib
            was being used, this caused errors.
21-06-05    Added missing config values so OrgTypeMgr now usable
21-06-05    Missing perm checks added for install routine (Michael Heuberger)
08-06-05    Public users can now view article author details
05-06-05    Fixed bug #1213557, 'wrong language in select on org_manager'
05-06-05    Fixed bug #1005263, "can't add new users", where preferences were not
            being assigned to users correctly (Pierpaolo Toniolo)

IMPROVEMENTS
23-06-05    More user-friendly error msgs when directories have incorrect perms
23-06-05    Linked org type manager to the org manager screen
16-06-05    Implemented bug reporter screen (to disable see 
            Configuration -> Debugging Options -> Show debug reporting link )